<resources>
    <string name="app_name">RUCafe</string>
    <string name="glazed_donut">Glazed Donut</string>
    <string name="chocolate_donut">Chocolate Donut</string>
    <string name="glazed_munchkins">Glazed Munchkins</string>
    <string name="cinnamon_bun">Cinnamon Donut</string>
    <string name="quantity_label">Quantity:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove_from_cart">Remove Item</string>
    <string name="add_to_order">Add to Order</string>
    <string name="subtotal">Subtotal:</string>
    <string name="zero_subtotal">$0.00</string>
    <string name="place_order">Place Order</string>
    <string name="short_size">Short</string>
    <string name="tall_size">Tall</string>
    <string name="grande_size">Grande</string>
    <string name="venti_size">Venti</string>
    <string name="caramel">Caramel</string>
    <string name="cream">Cream</string>
    <string name="milk">Milk</string>
    <string name="syrup">Syrup</string>
    <string name="whipped_cream">Whip Cream</string>
    <string name="order_donuts">Order Donuts</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="current_order">Current Order</string>
    <string name="view_orders">View Orders</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="remove_order">Remove Order</string>
    <string name="order_label">Order #</string>
    <string-array name="coffeeQuant">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
