<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/coffeewallp"
    android:backgroundTint="#632B2B2B"
    android:backgroundTintMode="src_over"
    tools:context=".DonutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="342dp"
        android:layout_height="62dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/quantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:inputType="number"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="111dp"
            android:layout_marginBottom="111dp"
            android:text="@string/quantity_label"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/quantityText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/addCart"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_corner"
            android:onClick="addToCart"
            android:text="@string/add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/removeCart"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:onClick="removeFromCart"
            android:text="@string/remove_from_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addOrder"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/addCart"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addOrder"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_corner"
            android:onClick="addToOrder"
            android:text="@string/add_to_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="393dp"
            android:layout_height="183dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/yeast" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/cake" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/hole" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/cinnamondonut" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="400dp"
            android:layout_height="44dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="70dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/glazedButton"
                android:layout_width="97dp"
                android:layout_height="wrap_content"


                android:text="@string/glazed_donut"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:id="@+id/chocolateButton"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/chocolate_donut"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:id="@+id/glazedMunchButton"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/glazed_munchkins"
                android:textColor="#FFFFFF" />

            <RadioButton
                android:id="@+id/cinnamonButton"
                android:layout_width="97dp"
                android:layout_height="wrap_content"
                android:text="@string/cinnamon_bun"
                android:textColor="#FFFFFF" />
        </RadioGroup>


    </LinearLayout>

    <ListView
        android:id="@+id/donutList"
        android:layout_width="413dp"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.853">

    </ListView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="416dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/donutList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.138">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/subtotal"
            android:textColor="@color/unselectedItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/subtotalView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtotalView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/zero_subtotal"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.507" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>